--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 	    <div class="navbar-collapse collapse">
 	        <ul class="nav navbar-nav">
 	            <li class="nav-item">
-	                <a class="nav-link" href="#">Link</a>
+	                <a class="nav-link" href="#"></a>
 	            </li>
 	            <li class="nav-item">
 	                <a class="nav-link" href="#">Link</a>
@@ -29,7 +29,7 @@
 	            </li>
 	        </ul>
 	    </div>
-	    <a class="navbar-brand mx-auto" href="#">NavBar</a>
+	    <a class="navbar-brand mx-auto" href="#">Есть, поесть!</a>
 	    <div class="navbar-collapse collapse">
 	        <ul class="nav navbar-nav ml-auto">
 	            <li class="nav-item">
@@ -39,8 +39,8 @@
 	    </div>
 	</nav>
 
-
-
+	<!-- Content -->
+	
 
 
 		
