--- a/html/index.html
+++ b/html/index.html
@@ -2,46 +2,358 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Index</title>
+	<title>Главная</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 
-
 	<!-- Navbar -->
-	<nav id="topNav" class="navbar fixed-top navbar-toggleable-sm navbar-inverse bg-inverse">
-	    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-	        ☰
-	    </button>
-	    <div class="navbar-collapse collapse">
-	        <ul class="nav navbar-nav">
-	            <li class="nav-item">
-	                <a class="nav-link" href="#"></a>
-	            </li>
-	            <li class="nav-item">
-	                <a class="nav-link" href="#">Link</a>
-	            </li>
-	            <li class="nav-item">
-	                <a class="nav-link" href="#">Link</a>
-	            </li>
-	            <li class="nav-item">
-	                <a class="nav-link" href="#">Link</a>
-	            </li>
-	        </ul>
-	    </div>
-	    <a class="navbar-brand mx-auto" href="#">Есть, поесть!</a>
-	    <div class="navbar-collapse collapse">
-	        <ul class="nav navbar-nav ml-auto">
-	            <li class="nav-item">
-	                <a class="nav-link" href="#">About</a>
-	            </li>
-	        </ul>
-	    </div>
-	</nav>
+	<div class="navbar navbar-toggleable-md navbar-light bg-faded">
+  		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    		<span class="navbar-toggler-icon"></span>
+  		</button>
+  		<a class="navbar-brand" href="#">Есть поесть?</a>
 
-	<!-- Content -->
+  		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  			<ul class="navbar-nav mr-auto">
+      			<li class="nav-item active">
+        			<a class="nav-link" href="#">Главная<span class="sr-only">(current)</span></a>
+      			</li>
+      			<li class="nav-item">
+        			<a class="nav-link" href="#">Рецепты</a>
+      			</li>
+    		</ul>
+    		<ul class="navbar-nav">
+    			<li class="nav-item dropdown"></li>
+    		</ul>
+
+    		<form class="form-inline my-2 my-lg-0">
+		    	<input class="form-control mr-sm-2" type="text" placeholder="Search">
+		    	<button class="btn btn-success my-2 my-sm-0" type="submit">Поиск</button>
+		    </form>
+		  
+		    <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    	<i class="fa fa-user" aria-hidden="true"></i>
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Войти</a>
+                        <a class="dropdown-item" href="#">Регистрация</a>
+                    </div>
+                </li>
+            </ul>
+  		</div>
+	</div>
+
 	
+	<!-- Content -->
+	<div class="container">
 
+		<div class="content">
+			<div class="jumbotron jumbotron-fluid mt-5 mb-5">
+		  		<div class="container">
+		    		<h1 class="display-3">Есть поесть?</h1>
+		    		<p class="lead">1. Выбери тип блюда.<br>
+		    			2. Выбери время на приготовление.<br>
+		    			3. Выбери ингридиенты, которые есть у тебя в холодильнике.</p>
+		  		</div>
+			</div>
+			
+			<div class="form-group row">
+				<div class="col-md-6 col-sm-1">
+					<div class="form-group">
+		    			<label for="type">Выберите тип блюда</label>
+		    			<select class="form-control" id="type">
+		      				<option>Завтрак</option>
+						    <option>Обед</option>
+						    <option>Полдник</option>
+						    <option>Ужин</option>
+						</select>
+					</div>
+				</div>
+				<div class="col-md-6 col-sm-1">
+					<div class="form-group">
+	    				<label for="time">Выберите время приготовления</label>
+	    				<select class="form-control" id="time">
+	    					<option>15 мин</option>
+	    					<option>20 мин</option>
+	    					<option>40 мин</option>
+	    					<option>60 мин</option>
+						</select>
+					</div>
+				</div>
+			</div>
+
+			<label>Выберите продукты, которые есть у вас в холодильнике</label>
+			<div class="form-group row">
+			<div class="col-md-3 col-sm-3">
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Хлеб
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Помидоры
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Огурец
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Крабовые палочки
+					</label>
+				</div>
+			</div>
+
+			<div class="col-md-3 col-sm-3">
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Молоко
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Кукуруза
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Мясо
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Горошек
+					</label>
+				</div>
+			</div>
+
+			<div class="col-md-3 col-sm-3">
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Колбаса
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Майонез
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Картошка
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Лук
+					</label>
+				</div>
+			</div>
+
+			<div class="col-md-3 col-sm-3">
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Яйца
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Масло
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Гречка
+					</label>
+				</div>
+				<div class="form-check">
+					<label class="form-check-label">
+						<input type="checkbox" class="form-check-input"> Рис
+					</label>
+				</div>
+			</div>
+
+			<button class="btn btn-success" type="submit" id="resultButton">Получить рецепты</button>
+			</div>
+
+			<div class="card">
+	  			<div class="card-header bg-success" id="card-header">
+	  				Завтрак		
+	  			</div>
+	  			<div class="card-block">
+	    			<h4 class="card-title">Омлет</h4>
+	    			<p class="card-text">Быстро, вкусно, полезно</p>
+
+	    			<!-- Button trigger modal -->
+	    			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recipe">
+	    				Посмотреть рецепт
+	    			</button>
+
+	    			<!-- Modal -->
+	    			<div class="modal fade" id="recipe" tabindex="-1" role="dialog" aria-labelledby="recipeTitle" aria-hidden="true">
+	    				<div class="modal-dialog modal-lg" role="document">
+	    					<div class="modal-content">
+	    						<div class="modal-header">
+	    							<h5 class="modal-title" id="recipeTitle">Омлет</h5>
+	    							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	    								<span aria-hidden="true">&times;</span>
+	    							</button>
+	    						</div>
+
+	    						<div class="modal-body">
+	    							<div id="description">
+	    								<p>Описание блюда</p>
+	    							</div>
+	    							<div id="incredients">
+	    								<ul>
+	    									<li>Ингридиент 1</li>
+	    									<li>Ингридиент 2</li>
+	    									<li>Ингридиент 3</li>
+	    								</ul>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+
+	    	<div class="card">
+	  			<div class="card-header bg-warning" id="card-header">
+	  				Обед	
+	  			</div>
+	  			<div class="card-block">
+	    			<h4 class="card-title">Катошка по-французски</h4>
+	    			<p class="card-text">Питательный обед</p>
+
+	    			<!-- Button trigger modal -->
+	    			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recipe">
+	    				Посмотреть рецепт
+	    			</button>
+
+	    			<!-- Modal -->
+	    			<div class="modal fade" id="recipe" tabindex="-1" role="dialog" aria-labelledby="recipeTitle" aria-hidden="true">
+	    				<div class="modal-dialog modal-lg" role="document">
+	    					<div class="modal-content">
+	    						<div class="modal-header">
+	    							<h5 class="modal-title" id="recipeTitle">Омлет</h5>
+	    							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	    								<span aria-hidden="true">&times;</span>
+	    							</button>
+	    						</div>
+
+	    						<div class="modal-body">
+	    							<div id="description">
+	    								<p>Описание блюда</p>
+	    							</div>
+	    							<div id="incredients">
+	    								<ul>
+	    									<li>Ингридиент 1</li>
+	    									<li>Ингридиент 2</li>
+	    									<li>Ингридиент 3</li>
+	    								</ul>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+
+	    	<div class="card">
+	  			<div class="card-header bg-info" id="card-header">
+	  				Полдник
+	  			</div>
+	  			<div class="card-block">
+	    			<h4 class="card-title">Молоко с Хлебом</h4>
+	    			<p class="card-text">Если совсем уж ничего не осталось</p>
+
+	    			<!-- Button trigger modal -->
+	    			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recipe">
+	    				Посмотреть рецепт
+	    			</button>
+
+	    			<!-- Modal -->
+	    			<div class="modal fade" id="recipe" tabindex="-1" role="dialog" aria-labelledby="recipeTitle" aria-hidden="true">
+	    				<div class="modal-dialog modal-lg" role="document">
+	    					<div class="modal-content">
+	    						<div class="modal-header">
+	    							<h5 class="modal-title" id="recipeTitle">Омлет</h5>
+	    							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	    								<span aria-hidden="true">&times;</span>
+	    							</button>
+	    						</div>
+
+	    						<div class="modal-body">
+	    							<div id="description">
+	    								<p>Описание блюда</p>
+	    							</div>
+	    							<div id="incredients">
+	    								<ul>
+	    									<li>Ингридиент 1</li>
+	    									<li>Ингридиент 2</li>
+	    									<li>Ингридиент 3</li>
+	    								</ul>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+
+	    	<div class="card">
+	  			<div class="card-header bg-primary" id="card-header">
+	  				Ужин	
+	  			</div>
+	  			<div class="card-block">
+	    			<h4 class="card-title">Гречка с котлетами</h4>
+	    			<p class="card-text">Полноценный ужин</p>
+
+	    			<!-- Button trigger modal -->
+	    			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recipe">
+	    				Посмотреть рецепт
+	    			</button>
+
+	    			<!-- Modal -->
+	    			<div class="modal fade" id="recipe" tabindex="-1" role="dialog" aria-labelledby="recipeTitle" aria-hidden="true">
+	    				<div class="modal-dialog modal-lg" role="document">
+	    					<div class="modal-content">
+	    						<div class="modal-header">
+	    							<h5 class="modal-title" id="recipeTitle">Омлет</h5>
+	    							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	    								<span aria-hidden="true">&times;</span>
+	    							</button>
+	    						</div>
+
+	    						<div class="modal-body">
+	    							<div id="description">
+	    								<p>Описание блюда</p>
+	    							</div>
+	    							<div id="incredients">
+	    								<ul>
+	    									<li>Ингридиент 1</li>
+	    									<li>Ингридиент 2</li>
+	    									<li>Ингридиент 3</li>
+	    								</ul>
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+
+		</div>
+	</div>
 
 		
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
